components/front/first.module.css
/* .topo {
    position: absolute;
    z-index: -1;
    top: 40px;
    left: 20vw;
} */

.container {
	height: 100%;
	display: flex;
	justify-content: center;
	background-image: url('../../images/globe.png?webp');
	background-repeat: no-repeat;
	background-size: calc(200px + 30vw) calc(200px + 30vw);
	background-position: center;
	flex-direction: column;
}

.containerFallback {
	height: 100%;
	display: flex;
	justify-content: center;
	background-image: url('../../images/globe.png');
	background-repeat: no-repeat;
	background-size: calc(200px + 30vw) calc(200px + 30vw);
	background-position: center;
	flex-direction: column;
}

.applyNowWrapper {
	display: flex;
	flex-direction: column;
	max-width: max-content;
	font-weight: 800;
	font-size: 68px;
	line-height: 70px;
	text-transform: uppercase;
	margin: var(--gap-double) auto;
}

.largest {
	display: flex;
	align-items: flex-end;
	margin-right: 6vw;
	flex-direction: column;
	margin-top: 64px;
}

.details {
	display: flex;
	justify-content: space-between;
	font-size: 18px;
}

.connect {
	font: inherit;
	margin-top: calc(var(--gap-double) * 4);
	text-align: center;
}

.connect::after {
	color: var(--blue);
	content: '.';
}

.rainbow {
	background: linear-gradient(0deg, #ff8379, #feda22);
	background-clip: text;
	-webkit-text-fill-color: transparent;
	text-transform: uppercase;
}

.headingText {
	font-size: 4vw;
	line-height: 4vw;
	letter-spacing: 1px;
	font-style: normal;
	font-weight: normal;
	font-size: 45px;
	line-height: 47px;
	text-align: right;
	letter-spacing: 1px;
	text-transform: uppercase;
}

.hackscBackground {
	position: absolute;
	width: 100vw;
	height: 95px;
	left: 0px;
	top: 8vh;
	z-index: 1;
	background: linear-gradient(270deg, #feda22 0%, #ff8379 100%), #ff8379;
}

.hacksc {
	position: absolute;
	width: 100vw;
	height: 20vh;
	top: 8vh;
	height: 14vh;
	color: var(--bg);
	font-weight: 800;
	font-size: 80px;
	line-height: 94px;
	letter-spacing: 1px;
	text-transform: uppercase;
	overflow: hidden;
	white-space: nowrap;
	user-select: none;
	z-index: 2;
}

.dotflower {
	position: absolute;
	width: 100px;
	height: 100px;
	right: 0;
	top: 55vh;
}

@media only screen and (max-width: 960px) {
	.container {
		width: 100vw;
		justify-content: center;
	}

	.applyNowWrapper {
		left: -50%;
	}

	.headingText {
		font-size: 48px;
		line-height: 56px;
		text-align: center;
		margin-top: 0;
	}

	.details {
		flex-direction: column;
		margin: 0 auto;
	}

	.dotflower {
		display: none;
	}

	.largest {
		align-items: center;
		margin: 0;
	}
}

